chore: fix app url for https domain

--- a/.env.docker
+++ b/.env.docker
@@ -2,7 +2,8 @@ APP_NAME=Croccinoo
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL=http://localhost:8080
+APP_URL=https://croccinoo.ir
+ASSET_URL=https://croccinoo.ir
 APP_KEY=base64:Qz7Kx2AEuU+y5F0vq3GwjzFiMWJ+egGUrug4ttP86Tk=
 
 LOG_CHANNEL=stack
