--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,9 @@ services:
     depends_on:
       - mariadb
     volumes:
-      - croccinoo_app_code:/var/www/html
-      - croccinoo_storage:/var/www/html/storage
-      - croccinoo_bootstrap:/var/www/html/bootstrap/cache
+      - croccinoo_app_code:/var/www/croccinoo-menu
+      - croccinoo_storage:/var/www/croccinoo-menu/storage
+      - croccinoo_bootstrap:/var/www/croccinoo-menu/bootstrap/cache
     networks:
       - croccinoo_net
 
@@ -40,9 +40,9 @@ services:
     depends_on:
       - app
     volumes:
-      - croccinoo_app_code:/var/www/html:ro
-      - croccinoo_storage:/var/www/html/storage
-      - croccinoo_bootstrap:/var/www/html/bootstrap/cache
+      - croccinoo_app_code:/var/www/croccinoo-menu:ro
+      - croccinoo_storage:/var/www/croccinoo-menu/storage
+      - croccinoo_bootstrap:/var/www/croccinoo-menu/bootstrap/cache
       - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - croccinoo_net
