--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name _;
-    root /var/www/html/public;
+    root /var/www/croccinoo-menu/public;
     index index.php index.html;
 
     client_max_body_size 50M;
@@ -26,7 +26,7 @@ server {
     }
 
     location ^~ /storage/ {
-        alias /var/www/html/storage/app/public/;
+        alias /var/www/croccinoo-menu/storage/app/public/;
         try_files $uri $uri/ =404;
     }
 }
