--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     depends_on:
       - mariadb
     volumes:
-      - croccinoo_app_code:/var/www/croccinoo-menu
+      - ${HOST_CODE_PATH:-/var/www/croccinoo-menu}:/var/www/croccinoo-menu
       - croccinoo_storage:/var/www/croccinoo-menu/storage
       - croccinoo_bootstrap:/var/www/croccinoo-menu/bootstrap/cache
     networks:
@@ -40,10 +40,10 @@ services:
     depends_on:
       - app
     volumes:
-      - croccinoo_app_code:/var/www/croccinoo-menu:ro
+      - ${HOST_CODE_PATH:-/var/www/croccinoo-menu}:/var/www/croccinoo-menu:ro
       - croccinoo_storage:/var/www/croccinoo-menu/storage
       - croccinoo_bootstrap:/var/www/croccinoo-menu/bootstrap/cache
-      - /var/www/croccinoo-menu/docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ${HOST_CODE_PATH:-/var/www/croccinoo-menu}/docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - croccinoo_net
 
@@ -70,7 +70,6 @@ networks:
     driver: bridge
 
 volumes:
-  croccinoo_app_code:
   croccinoo_storage:
   croccinoo_bootstrap:
   croccinoo_db_data:
