--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,20 @@ services:
     depends_on:
       - mariadb
     volumes:
-      - ${HOST_CODE_PATH:-/var/www/croccinoo-menu}:/var/www/croccinoo-menu
+      - croccinoo_app_code:/var/www/croccinoo-menu
+      - ${HOST_CODE_PATH:-/var/www/croccinoo-menu}:/mnt/host_code:ro
       - croccinoo_storage:/var/www/croccinoo-menu/storage
       - croccinoo_bootstrap:/var/www/croccinoo-menu/bootstrap/cache
+    command: >
+      sh -c "
+        if [ -d /mnt/host_code ]; then
+          cp -a /mnt/host_code/. /var/www/croccinoo-menu/
+        fi &&
+        if [ ! -d /var/www/croccinoo-menu/vendor ]; then
+          composer install --no-dev --prefer-dist --optimize-autoloader --no-interaction --no-progress;
+        fi &&
+        php-fpm
+      "
     networks:
       - croccinoo_net
 
@@ -40,7 +51,7 @@ services:
     depends_on:
       - app
     volumes:
-      - ${HOST_CODE_PATH:-/var/www/croccinoo-menu}:/var/www/croccinoo-menu:ro
+      - croccinoo_app_code:/var/www/croccinoo-menu:ro
       - croccinoo_storage:/var/www/croccinoo-menu/storage
       - croccinoo_bootstrap:/var/www/croccinoo-menu/bootstrap/cache
       - ${HOST_CODE_PATH:-/var/www/croccinoo-menu}/docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
@@ -70,6 +81,7 @@ networks:
     driver: bridge
 
 volumes:
+  croccinoo_app_code:
   croccinoo_storage:
   croccinoo_bootstrap:
   croccinoo_db_data:
