--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name _;
-    root /var/www/croccinoo-menu/public;
+    root /var/www/html/public;
     index index.php index.html;
 
     client_max_body_size 50M;
@@ -15,7 +15,7 @@ server {
 
     location ~ \.php$ {
         try_files $uri =404;
-        fastcgi_pass app:9000;
+        fastcgi_pass php:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
@@ -26,7 +26,7 @@ server {
     }
 
     location ^~ /storage/ {
-        alias /var/www/croccinoo-menu/storage/app/public/;
+        alias /var/www/html/storage/app/public/;
         try_files $uri $uri/ =404;
     }
 }
